--- a/src/main/resources/templates/app1/casLoginView.html
+++ b/src/main/resources/templates/app1/casLoginView.html
@@ -9,6 +9,7 @@
 
 <body>
 <h2 th:text="${#themes.code('cas.page.title')}"></h2>
+<h2 th:text="#{screen.login.welcome}"></h2>
 <div>
     <form method="post" th:object="${credential}">
         <div th:if="${#fields.hasErrors('*')}">
